[tool.poetry]
name = "forecast_combine"
version = "0.0.4"
description = "Automation of forecast models testing, combining and predicting"
authors = ["amineraboun <amineraboun@gmail.com>"]
repository ="https://github.com/amineraboun/forecast"
homepage  ="https://github.com/amineraboun/forecast"

readme = "README.md"
keywords = ["arima", "ets", "theta", "tbats", "prophet"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
sktime = "^0.28.0"
statsforecast = "^1.7.4"
tbats = "^1.1.3"
prophet = "^1.1.4"
arch = "^6.3.0"
statsmodels = "^0.14.0"
tqdm = "^4.66.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
openpyxl = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0"
sphinx = "^7.1.2"
nbsphinx = "^0.9.2"
sphinx-mdinclude = "^0.5.3"
pandoc = "^2.3"
pdoc = "^14.4.0"
typing-extensions = "^4.11.0"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[tool.pylint]
   [tool.pylint."FORMAT"]
   max-line-length = 120
   max-args = 5
   
# Documentation dependencies
[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"